<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardMaxElevation="8dp"
    android:id="@+id/bottomSheetContainer">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblCallUs"
            style="@style/DetailsPageHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_us"
            android:textColor="@color/DodgerBlue"
            android:layout_marginTop="4dp"/>
        <View
            style="@style/Divider"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblShare"
            style="@style/DetailsPageHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textColor="@color/DodgerBlue"/>
        <View
            style="@style/Divider"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblCancel"
            style="@style/DetailsPageHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/DodgerBlue"/>
        <View
            style="@style/Divider"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"/>
    </LinearLayout>


</androidx.cardview.widget.CardView>
