<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/title"
      android:layout_width="wrap_content"
      android:layout_height="?actionBarSize"
      android:text="@string/registration_setup_whats_is_your_interest"
      android:gravity="center"
      android:textSize="24sp"
      android:textColor="@color/black"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"/>

  <View
      android:layout_width="0dp"
      android:layout_height="2dp"
      android:background="@color/black"
      app:layout_constraintWidth_percent="0.40"
      app:layout_constraintStart_toStartOf="@id/title"
      app:layout_constraintTop_toBottomOf="@id/title"/>
  <LinearLayout
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_gravity="center"
      android:layout_margin="16dp"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/title">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/SubTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/title_what_is_ur_interest_page" />

    <ListView
        android:id="@+id/preferenceArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutButtonArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

      <com.google.android.material.button.MaterialButton
          android:id="@+id/btnBack"
          style="@style/Widget.MaterialComponents.Button.TextButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="left"
          android:drawableLeft="@drawable/ic_backbutton"
          android:fontFamily="@font/ubuntu"
          android:padding="16dp"
          android:text="@string/btn_back"
          android:textColor="@color/Black"
          android:textSize="16sp"
          android:textStyle="bold"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <com.google.android.material.button.MaterialButton
          android:id="@+id/btnExit"
          style="@style/Widget.MaterialComponents.Button.TextButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="right"
          android:drawableRight="@drawable/ic_right_arrow_24"
          android:fontFamily="@font/ubuntu"
          android:padding="16dp"
          android:text="@string/save"
          android:textColor="@color/Black"
          android:textSize="16sp"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>