<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activities.RegistrationSetup">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="?actionBarSize"
        android:gravity="center"
        android:text="@string/registration_setup_title_start_our_simple"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintWidth_percent="0.20" />


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.505">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SubTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/txt_where_are_u_going" />

            <Spinner
                android:id="@+id/spnWhereToGo"
                style="@style/Widget.AppCompat.DropDownItem.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/wheretogo_choice"
                android:spinnerMode="dialog" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="8dp"
                android:background="@color/Gray" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtArrivalTimeTitle"
                style="@style/SubTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/txt_arrival_time" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtArrivalTime"
                style="@style/SubTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="2"
                android:background="@null"
                android:hint="@string/arrival_time_hint"
                android:inputType="textPersonName"
                android:maxLength="25"
                android:maxLines="1" />


            <View
                android:id="@+id/viewArrivalTime"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="8dp"
                android:background="@color/Gray" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SubTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/language" />

            <!--<androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtUsername"
                style="@style/SubTitleEditTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@null"
                android:hint="@string/choose"
                android:inputType="textPersonName"
                android:maxLength="25"
                android:maxLines="1"
                android:layout_margin="8dp"/>-->
            <Spinner
                android:id="@+id/spnLanguage"
                style="@style/Widget.AppCompat.DropDownItem.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/language_choice"
                android:spinnerMode="dialog" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="8dp"
                android:background="@color/Gray" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNext"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:drawableRight="@drawable/ic_right_arrow_24"
                android:fontFamily="@font/ubuntu_bold"
                android:padding="16dp"
                android:text="@string/next"
                android:textColor="@color/Black"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>