<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingsActivity">
    <LinearLayout
        android:id="@+id/actionbar_area"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/red_main_theme"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:onClick="back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_back_arrow_24"
            android:tint="@color/White" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/DetailsPageHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/White" />
        <androidx.appcompat.widget.AppCompatImageView
            android:onClick="back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_back_arrow_24"
            android:tint="@color/red_main_theme" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionbar_area">
        <LinearLayout
            android:onClick="notificationSettings"
            android:id="@+id/notificationArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/shape_circle_background_lightgray"
                android:src="@drawable/ic_account_user_24" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/AccountPageSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:text="@string/notification_settings" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="32dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_chevron_right_black_24dp"
                android:tint="@color/subtitle_text_color" />
        </LinearLayout>

        <View
            style="@style/Divider"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/LightGrey" />

        <LinearLayout
            android:onClick="editProfile"
            android:id="@+id/editProfileArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/shape_circle_background_lightgray"
                android:src="@drawable/ic_outline_edit_24" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/AccountPageSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:text="@string/edit_profile"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="32dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_chevron_right_black_24dp"
                android:tint="@color/subtitle_text_color" />
        </LinearLayout>

        <View
            style="@style/Divider"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/LightGrey" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>